Do not resume demo mode setup screens in OOBE.

A few of the demo setup screens are instances of regular OOBE screens.
After resume the information about demo mode is not preserved. It
results with resuming screen in regular OOBE flow and can cause error
state.

Bug: 879291
Test: Manuall + WizardController browser tests
Change-Id: I47176b8d0d801141ca05ee710028b9a019f77e54
Reviewed-on: https://chromium-review.googlesource.com/1232953
Reviewed-by: Michael Giuffrida <michaelpg@chromium.org>
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Commit-Queue: Aga Wronska <agawronska@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#594020}(cherry picked from commit 2361a3dcf31bb7b4af23c645d0cd71591627c927 [formerly 126e7d72a19e66aac93fa7f4ecb6f7fee29591c5])
Reviewed-on: https://chromium-review.googlesource.com/1252857
Reviewed-by: Aga Wronska <agawronska@chromium.org>
Cr-Commit-Position: refs/branch-heads/3538@{#757}
Cr-Branched-From: 57781ff9a8651bc653184f680b0a4d8b92b6971f [formerly 79f7c91a2b2a2932cd447fa6f865cb6662fa8fa6]-refs/heads/master@{#587811}
Former-commit-id: c1ae5286e1824eb9c0fb79880a40a6fbb6a5fc7d